Create: - function and api end point for create admin is create.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "strict": true,
     "alwaysStrict": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    // "noUnusedParameters": true,
     "noImplicitReturns": true,
   }
 }
